@@ -1,7 +1,7 @@
 package tutoraid.model.util;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 import tutoraid.model.LessonBook;
 import tutoraid.model.ReadOnlyLessonBook;
@@ -11,11 +11,9 @@ import tutoraid.model.lesson.Capacity;
 import tutoraid.model.lesson.Lesson;
 import tutoraid.model.lesson.LessonName;
 import tutoraid.model.lesson.Price;
-import tutoraid.model.lesson.Students;
 import tutoraid.model.lesson.Timing;
 import tutoraid.model.student.Lessons;
 import tutoraid.model.student.ParentName;
-import tutoraid.model.student.PaymentStatus;
 import tutoraid.model.student.Phone;
 import tutoraid.model.student.ProgressList;
 import tutoraid.model.student.Student;
@@ -26,56 +24,47 @@ import tutoraid.model.student.StudentName;
  */
 public class SampleDataUtil {
 
-    public static final PaymentStatus DEFAULT_PAYMENT_STATUS = new PaymentStatus(false);
-
-    public static Student[] getSampleStudents() {
+    public static Student[] getSampleStudents(ReadOnlyLessonBook lessonBook) {
         return new Student[] {
             // All details available
             new Student(new StudentName("Alex Yeoh"), new Phone("87438807"),
                     new ParentName("Mr Yeoh"), new Phone("93726483"),
-                    new ProgressList(), DEFAULT_PAYMENT_STATUS,
-                    new Lessons(new ArrayList<>(Arrays.asList("Maths 1")))),
+                    new ProgressList(),
+                    new Lessons(new ArrayList<>(List.of("Maths 1")), lessonBook)),
             new Student(new StudentName("Bernice Yu"), new Phone("99272758"),
                     new ParentName("Mrs Yu"), new Phone("83548274"),
-                    new ProgressList(), DEFAULT_PAYMENT_STATUS, new Lessons()),
+                    new ProgressList(), new Lessons()),
             // Parent's details unavailable
             new Student(new StudentName("Charlotte Oliveiro"), new Phone("93210283"),
                     new ParentName(""), new Phone(""),
-                    new ProgressList(), DEFAULT_PAYMENT_STATUS, new Lessons()),
+                    new ProgressList(), new Lessons()),
             // Phone details unavailable
             new Student(new StudentName("David Li"), new Phone(""),
                     new ParentName("Mr Li"), new Phone(""),
-                    new ProgressList(), DEFAULT_PAYMENT_STATUS, new Lessons()),
+                    new ProgressList(), new Lessons()),
             // Phone and parent's details unavailable
             new Student(new StudentName("Irfan Ibrahim"), new Phone(""),
                     new ParentName(""), new Phone(""),
-                    new ProgressList(), DEFAULT_PAYMENT_STATUS, new Lessons()),
+                    new ProgressList(), new Lessons()),
             // Student phone unavailable
             new Student(new StudentName("Roy Balakrishnan"), new Phone(""),
                     new ParentName("Mrs Balakrishnan"), new Phone("93628676"),
-                    new ProgressList(), DEFAULT_PAYMENT_STATUS, new Lessons())
+                    new ProgressList(), new Lessons())
         };
     }
 
-    public static ReadOnlyStudentBook getSampleStudentBook() {
+    public static ReadOnlyStudentBook getSampleStudentBook(ReadOnlyLessonBook lessonBook) {
         StudentBook sampleSb = new StudentBook();
-        for (Student sampleStudent : getSampleStudents()) {
+        for (Student sampleStudent : getSampleStudents(lessonBook)) {
             sampleSb.addStudent(sampleStudent);
         }
         return sampleSb;
     }
 
     public static Lesson[] getSampleLessons() {
-        ArrayList<Student> sampleStudentInLesson = new ArrayList<>();
-        Student sampleStudent = new Student(new StudentName("Alex Yeoh"), new Phone("87438807"),
-                new ParentName("Mr Yeoh"), new Phone("93726483"),
-                new ProgressList(), DEFAULT_PAYMENT_STATUS,
-                new Lessons(new ArrayList<>(Arrays.asList("Maths 1"))));
-        sampleStudentInLesson.add(sampleStudent);
-
         return new Lesson[] {
             new Lesson(new LessonName("Maths 1"), new Capacity("50"),
-                    new Price("100"), new Students(sampleStudentInLesson),
+                    new Price("100"),
                     new Timing("1000-1200"))
         };
     }
